--- a/.gitignore
+++ b/.gitignore
@@ -174,6 +174,7 @@ cython_debug/
 .pypirc
 
 mlops-zoomcamp/
-notebooks/data/
-notebooks/models/
+notebooks/
 soft/
+01-intro/data/
+01-intro/models/
